# Oreulius-Kernel

./: .gitignore  CAPABILITY_PASSING_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTOR-LICENSE.md  FILESYSTEM_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IPC_IMPLEMENTATION_SUMMARY.md  KERNEL_SIZE_FIX.md  LICENSE  LICENSE-FAQ.md  NETWORKING-REALITY-CHECK.md  OreuliusLiscence.md  OreuliusLiscence.txt  PHASE_1B_DELIVERY_SUMMARY.md  PROCESS_MANAGER_IMPLEMENTATION.md  README.md  REGISTRY_IMPLEMENTATION.md  REGISTRY_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SECURITYISSUETOBESOLVED.md  VERIFICATION_TARGET_MATRIX.md  WHY-LICENSE.md  capnet_test.rs  codepageheader.md  formal-verification-runbook.sh  homepage.jsx  patch.py  ver_out2.txt
docs/: README.md  (+34 more)
kernel/: Cargo.toml  FILESYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  README.md  boot.asm  build-aarch64-virt.sh  build-iso.sh  build-x86_64-full.sh  build-x86_64-mb2-iso.sh  build.rs  build.sh  formal-verify.sh  i686-oreulia.json  i686-oreulius.json  kernel.ld  librust_out.rlib  linker-aarch64-virt.ld  linker-x86_64-mb2.ld  patch_temporal.py  patch_temporal_2.py  patch_wasm.py  qmp_output.txt  quick-rebuild.sh  run-aarch64-virt-image-virtio-blk-mmio.sh  run-aarch64-virt-image-virtio-net-blk-mmio.sh  run-aarch64-virt-image.sh  run-capnet-node-a.sh  run-capnet-node-b.sh  run-x86_64-mb2-grub.sh  run.sh  run_output.txt  smoke_log.txt  test-boot.sh  test-cow.expect  test-filesystem.sh  test-minimal  test-services.expect  test-services.sh  ver_out.txt  ver_out10.txt  (+12 more)
kernel/.cargo/: config.toml
kernel/archive/: README.md
kernel/asm/: context_switch.asm  context_switch.asm.bak  cpu_features.asm  interrupt.asm  perf.asm
kernel/ci/: capnet-multinode-x86_64.expect  capnet-multinode-x86_64.sh  extended-aarch64.expect  extended-aarch64.sh  extended-all.sh  extended-x86_64.expect  extended-x86_64.sh  network-aarch64.expect  network-aarch64.sh  network-i686.expect  network-i686.py  network-i686.sh  network-x86_64.expect  network-x86_64.sh  smoke-aarch64.expect  smoke-aarch64.sh  smoke-i686.expect  smoke-i686.sh  smoke-x86_64.expect  smoke-x86_64.sh  soak-i686.expect  soak-i686.sh
kernel/fuzz/: README.md  capnet_seed_corpus.txt  ci_capnet_check.sh  ci_regression_check.sh  run_capnet_corpus.expect  run_capnet_single_seed.expect  run_wasm_jit_corpus.expect  wasm_jit_seed_corpus.txt
kernel/iso_check/: grub.cfg
kernel/src/: # Code Citations.md  aarch64_alloc.rs  acpi_asm.rs  advanced_commands.rs  asm_bindings.rs  ata.rs  audio.rs  bluetooth.rs  capability.rs  capnet.rs  commands.rs  commands_aarch64.rs  commands_shared.rs  compositor.rs  console_service.rs  cpu_security.rs  crypto.rs  disk.rs  dma_asm.rs  e1000.rs  elf.rs  enclave.rs  exact_rational.rs  formal.rs  framebuffer.rs  fs.rs  gdt.rs  hardened_allocator.rs  idt_asm.rs  input.rs  intent_graph.rs  intent_wasm.rs  interrupt_dag.rs  interrupts.rs  ipc.rs  keyboard.rs  kpti.rs  lib.rs  main.rs  memopt_asm.rs  (+51 more)
kernel/target-host/: .rustc_info.json
wasm/sdk/: Cargo.toml  oreulia.ld  rust-toolchain
(+580 files in other folders)
