[package]
name = "oreulia-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10"
uart_16550 = "0.3"
spin = "0.9"
x86_64 = "=0.14.10"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
