[package]
name = "oreulia-kernel"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.9"
bitflags = "2.5"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
