[package]
name = "oreulius-kernel"
version = "0.1.3-alpha"
edition = "2021"
autobins = false

[lib]
crate-type = ["staticlib"]

[features]
default = []
formal-verify = []
jit-fuzz-24bin = []
experimental_entropy_sched = []
host-tests = []

[dependencies]
spin = "0.9"
bitflags = "2.5"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
