[package]
name = "oreulia-sdk"
version = "0.1.0"
edition = "2021"
description = "Typed Rust bindings for the Oreulia OS WASM/WASI host ABI"
repository = "https://github.com/oreulia/oreulia"
license = "MIT OR Apache-2.0"

# This crate compiles to WASM (wasm32-wasi) or wasm32-unknown-unknown.
# It is intentionally no_std — kernel-side allocators are not available.

[lib]
name = "oreulia_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
opt-level = "z"          # minimise WASM binary size
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
